Cleaner filter and mask composition

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -238,8 +238,8 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filters = [cs.LowpassFilter(scattering.manager, cutoff=0.95), cs.WhiteningFilter(scattering.manager, micrograph=micrograph)]\n",
-    "filtered_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filters=filters)\n",
+    "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
+    "filtered_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter)\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
   },
@@ -297,7 +297,7 @@
     "mask = cs.CircularMask(scattering.manager)\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d)\n",
     "observed = mask(observation_model(key=jax.random.PRNGKey(1244)))\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, masks=[mask])\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, mask=mask)\n",
     "simulated, observed = model.render(), observed\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
