starting #51. resolution should be a parameter of the scattering method since in general it is about 2D images.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, irfftn, make_frequencies"
+    "from cryojax.utils import fftn, ifftn, make_frequencies"
    ]
   },
   {
@@ -85,11 +85,10 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "resolution = 5.28  # Angstroms\n",
     "#density = cs.VoxelCloud.from_file(filename, config=dict(atol=1e-8))\n",
     "density = cs.VoxelGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
-    "specimen = cs.Specimen(density=density, pose=pose, resolution=resolution)"
+    "specimen = cs.Specimen(density=density, pose=pose)"
    ]
   },
   {
@@ -107,9 +106,10 @@
    "source": [
     "# Configure the image formation process\n",
     "shape = (81, 82)\n",
+    "resolution = 5.28  # Angstroms\n",
     "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale))"
+    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale), resolution=resolution)"
    ]
   },
   {
@@ -201,15 +201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering.manager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Instantiate image filters\n",
     "fig, axes = plt.subplot_mosaic(\"\"\"\n",
     "AAAABBB\n",
@@ -218,7 +209,7 @@
     "freqs = make_frequencies((800, 600), pixel_size=resolution)\n",
     "micrograph = solvent.sample(key1, freqs) * optics(freqs) + fftn(detector.sample(key2, freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
-    "plot_image(irfftn(micrograph.T), fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
+    "plot_image(ifftn(micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
    ]
@@ -275,7 +266,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
     "plot_image(compute_image(detector.pixel_size, detector_model), fig, ax1)\n",
-    "plot_image(compute_image(2*detector.pixel_size, detector_model), fig, ax2)"
+    "plot_image(compute_image(1.1*detector.pixel_size, detector_model), fig, ax2)"
    ]
   },
   {
