rename resolution to pixel_size (more refactoring for #51)

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our template into a given volume representation of the ``Specimen``. We also must choose its ``Pose``."
+    "First we must read in our template into a given volume representation of the ``ensemble``. We also must choose its ``Pose``."
    ]
   },
   {
@@ -88,14 +88,14 @@
     "#density = cs.VoxelCloud.from_file(filename, config=dict(atol=1e-8))\n",
     "density = cs.VoxelGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
-    "specimen = cs.Specimen(density=density, pose=pose)"
+    "ensemble = cs.Ensemble(density=density, pose=pose)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the ``Specimen`` representation."
+    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the ``ElectronDensity`` representation."
    ]
   },
   {
@@ -106,10 +106,10 @@
    "source": [
     "# Configure the image formation process\n",
     "shape = (81, 82)\n",
-    "resolution = 5.28  # Angstroms\n",
+    "pixel_size = 5.28  # Angstroms\n",
     "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale), resolution=resolution)"
+    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale), pixel_size=pixel_size)"
    ]
   },
   {
@@ -128,7 +128,7 @@
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
-    "detector = cs.GaussianDetector(pixel_size=resolution, variance=cs.Constant(1.0))\n",
+    "detector = cs.GaussianDetector(pixel_size=pixel_size, variance=cs.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
     "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
@@ -165,9 +165,9 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_s, solvent=solvent)\n",
-    "optics_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_o, solvent=solvent)\n",
-    "detector_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, solvent=solvent)"
+    "scattering_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_s, solvent=solvent)\n",
+    "optics_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_o, solvent=solvent)\n",
+    "detector_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, solvent=solvent)"
    ]
   },
   {
@@ -206,7 +206,7 @@
     "AAAABBB\n",
     "\"\"\", figsize=(6.5, 3.5))\n",
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
-    "freqs = make_frequencies((800, 600), pixel_size=resolution)\n",
+    "freqs = make_frequencies((800, 600), pixel_size=pixel_size)\n",
     "micrograph = solvent.sample(key1, freqs) * optics(freqs) + fftn(detector.sample(key2, freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
     "plot_image(ifftn(micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
@@ -230,7 +230,7 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
-    "filtered_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter)\n",
+    "filtered_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter)\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
   },
@@ -286,9 +286,9 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "mask = cs.CircularMask(scattering.manager)\n",
-    "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d)\n",
+    "observation_model = cs.GaussianImage(scattering=scattering, ensemble=ensemble, instrument=instrument_d)\n",
     "observed = mask(observation_model(key=jax.random.PRNGKey(1244)))\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, mask=mask)\n",
+    "model = cs.GaussianImage(scattering=scattering, ensemble=ensemble, instrument=instrument_d, mask=mask)\n",
     "simulated, observed = model.render(), observed\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
