Addressing #87 and #88. Pixel size is now a coherent model parameter contained in the ScatteringModel. ElectronDensity stacking is now generic to the base class. Also, starting on #91 by making ElectronDensity.is_real a ClassVar.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -128,7 +128,7 @@
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
-    "detector = cs.GaussianDetector(pixel_size=pixel_size, variance=cs.Constant(1.0))\n",
+    "detector = cs.GaussianDetector(variance=cs.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
     "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "def update_model(pixel_size: jax.Array, model: cs.GaussianImage) -> cs.GaussianImage:\n",
-    "    return eqx.tree_at(lambda m: m.instrument.detector.pixel_size, model, pixel_size)\n",
+    "    return eqx.tree_at(lambda m: m.scattering.pixel_size, model, pixel_size)\n",
     "\n",
     "@jax.jit\n",
     "def compute_image(pixel_size: jax.Array, model: cs.GaussianImage) -> jax.Array:\n",
@@ -265,8 +265,8 @@
     "# Plot jitted model with updated parameters.\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
-    "plot_image(compute_image(detector.pixel_size, detector_model), fig, ax1)\n",
-    "plot_image(compute_image(1.1*detector.pixel_size, detector_model), fig, ax2)"
+    "plot_image(compute_image(scattering.pixel_size, detector_model), fig, ax1)\n",
+    "plot_image(compute_image(1.1*scattering.pixel_size, detector_model), fig, ax2)"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "outputs": [],
    "source": [
     "def update_model(pixel_size: jax.Array, model: cs.GaussianImage) -> cs.GaussianImage:\n",
-    "    return eqx.tree_at(lambda m: m.instrument.detector.pixel_size, model, pixel_size)\n",
+    "    return eqx.tree_at(lambda m: m.scattering.pixel_size, model, pixel_size)\n",
     "\n",
     "@jax.jit\n",
     "def compute_loss(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
@@ -330,7 +330,7 @@
    "outputs": [],
    "source": [
     "# Benchmark loss pipeline\n",
-    "%timeit likelihood = compute_loss(detector.pixel_size+.01, model, observed)"
+    "%timeit likelihood = compute_loss(scattering.pixel_size+.01, model, observed)"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "# Benchmark gradient pipeline\n",
-    "%timeit grad = compute_grad(detector.pixel_size+.01, model, observed)"
+    "%timeit grad = compute_grad(scattering.pixel_size+.01, model, observed)"
    ]
   },
   {
