--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -109,7 +109,8 @@
     "pixel_size = 5.28  # Angstroms\n",
     "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale), pixel_size=pixel_size)"
+    "manager = cs.ImageManager(shape=shape, pad_scale=pad_scale)\n",
+    "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)"
    ]
   },
   {
@@ -177,12 +178,13 @@
    "outputs": [],
    "source": [
     "# Plot models\n",
-    "key = jax.random.split(jax.random.PRNGKey(0))\n",
+    "keys = jax.random.split(jax.random.PRNGKey(0))\n",
+    "key = keys[0]\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "im1 = plot_image(scattering_model(key), fig, ax1, label=\"Exit plane\")\n",
     "im2 = plot_image(optics_model(key), fig, ax2, label=\"Detector plane\")\n",
-    "im3 = plot_image(detector_model(jax.random.PRNGKey(0)), fig, ax3, label=\"Detector readout\")\n",
+    "im3 = plot_image(detector_model(keys), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -218,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a low pass filter for antialiasing."
+    "Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a low pass filter."
    ]
   },
   {
@@ -229,9 +231,9 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
-    "filtered_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter)\n",
-    "plot_image(filtered_model.render(), fig, ax)"
+    "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * whiten\n",
+    "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter)\n",
+    "plot_image(whitened_model.render(), fig, ax)"
    ]
   },
   {
