--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our template into a given volume representation of the ``ensemble``. We also must choose its ``Pose``."
+    "First we must read in our template into a given volume representation of the ``Ensemble``. We also must choose its ``Pose``."
    ]
   },
   {
@@ -85,8 +85,8 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "#density = cs.VoxelCloud.from_file(filename, config=dict(atol=1e-8))\n",
-    "density = cs.VoxelGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
+    "#density = cs.VoxelCloud.from_file(filename)\n",
+    "density = cs.VoxelGrid.from_file(filename, pad_scale=1.5)\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
     "ensemble = cs.Ensemble(density=density, pose=pose)"
    ]
@@ -107,9 +107,8 @@
     "# Configure the image formation process\n",
     "shape = (81, 82)\n",
     "pixel_size = 5.28  # Angstroms\n",
-    "pad_scale = 1.5\n",
-    "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
-    "manager = cs.ImageManager(shape=shape, pad_scale=pad_scale)\n",
+    "manager = cs.ImageManager(shape=shape, pad_scale=1.5)\n",
+    "#scattering = cs.NufftProject(manager, pixel_size=pixel_size, eps=1e-5)\n",
     "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)"
    ]
   },
@@ -208,7 +207,7 @@
     "AAAABBB\n",
     "\"\"\", figsize=(6.5, 3.5))\n",
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
-    "freqs = make_frequencies((800, 600), pixel_size=pixel_size)\n",
+    "freqs = make_frequencies((800, 600), pixel_size)\n",
     "micrograph = solvent.sample(key1, freqs) * optics(freqs) + fftn(detector.sample(key2, freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
     "plot_image(ifftn(micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
@@ -220,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a low pass filter."
+    "Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a low pass filter and a circular mask."
    ]
   },
   {
@@ -232,117 +231,9 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * whiten\n",
-    "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter)\n",
-    "plot_image(whitened_model.render(), fig, ax)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we want to solve the inverse problem and find the model parameters that most likely generated the data, we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_model(pixel_size: jax.Array, model: cs.GaussianImage) -> cs.GaussianImage:\n",
-    "    return eqx.tree_at(lambda m: m.scattering.pixel_size, model, pixel_size)\n",
-    "\n",
-    "@jax.jit\n",
-    "def compute_image(pixel_size: jax.Array, model: cs.GaussianImage) -> jax.Array:\n",
-    "    model = update_model(pixel_size, model)\n",
-    "    return model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot jitted model with updated parameters.\n",
-    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
-    "ax1, ax2 = axes\n",
-    "plot_image(compute_image(scattering.pixel_size, detector_model), fig, ax1)\n",
-    "plot_image(compute_image(1.1*scattering.pixel_size, detector_model), fig, ax2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can also use the model to compute a likelihood. For this, we can use the ``GaussianImage`` model. This is a subclass of the ``ImagePipeline``, adding the ability to evaulate a likelihood. Let's evaulate the likelihood at the simulated data, and visualize the residuals."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the model and plot residuals\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
-    "ax1, ax2, ax3 = axes\n",
     "mask = cs.CircularMask(scattering.manager)\n",
-    "observation_model = cs.GaussianImage(scattering=scattering, ensemble=ensemble, instrument=instrument_d)\n",
-    "observed = mask(observation_model(key=jax.random.PRNGKey(1244)))\n",
-    "model = cs.GaussianImage(scattering=scattering, ensemble=ensemble, instrument=instrument_d, mask=mask)\n",
-    "simulated, observed = model.render(), observed\n",
-    "plot_image(simulated, fig, ax1)\n",
-    "plot_image(observed, fig, ax2)\n",
-    "plot_image(simulated - observed, fig, ax3)\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluating the ``GaussianImage`` with the observed data set will automatically evaulate the ``GausianImage.log_likelihood`` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_model(pixel_size: jax.Array, model: cs.GaussianImage) -> cs.GaussianImage:\n",
-    "    return eqx.tree_at(lambda m: m.scattering.pixel_size, model, pixel_size)\n",
-    "\n",
-    "@jax.jit\n",
-    "def compute_loss(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
-    "    model = update_model(pixel_size, model)\n",
-    "    return model(observed=observed)\n",
-    "\n",
-    "@jax.jit\n",
-    "@jax.grad\n",
-    "def compute_grad(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
-    "    return compute_loss(pixel_size, model, observed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark loss pipeline\n",
-    "%timeit likelihood = compute_loss(scattering.pixel_size+.01, model, observed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark gradient pipeline\n",
-    "%timeit grad = compute_grad(scattering.pixel_size+.01, model, observed)"
+    "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
+    "plot_image(whitened_model.render(), fig, ax)"
    ]
   },
   {
