change defaults for image intensity

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
+    "exposure = cs.UniformExposure(N=1000, mu=0.0)\n",
     "detector = cs.GaussianDetector(variance=cs.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=1.0, scale=1.0))"
+    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=1.0, scale=3.0))"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "\"\"\", figsize=(6.5, 3.5))\n",
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "freqs = make_frequencies((800, 600), pixel_size)\n",
-    "micrograph = solvent.sample(key1, freqs) * optics(freqs) + fftn(detector.sample(key2, freqs))\n",
+    "micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
     "whiten = cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
     "plot_image(ifftn(micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
@@ -235,6 +235,13 @@
     "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
