Filters and Masks can now use InitVar, now that dataclasses-json is dropped

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -231,7 +231,7 @@
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "freqs = make_frequencies((500, 400), pixel_size)\n",
     "fourier_micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
-    "whiten = cs.WhiteningFilter(scattering.manager, fourier_micrograph)\n",
+    "whiten = cs.WhiteningFilter(scattering.manager.padded_frequency_grid, fourier_micrograph)\n",
     "plot_image(ifftn(fourier_micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -273,8 +273,8 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = cs.LowpassFilter(scattering.manager, cutoff=0.95) * whiten\n",
-    "mask = cs.CircularMask(scattering.manager)\n",
+    "filter = cs.LowpassFilter(scattering.manager.padded_frequency_grid, cutoff=0.95) * whiten\n",
+    "mask = cs.CircularMask(scattering.manager.coordinate_grid)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
