first full attempt at #103. images don't look right yet.

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, ifftn, make_frequencies"
+    "from cryojax.utils import rfftn, irfftn, make_frequencies"
    ]
   },
   {
@@ -200,16 +200,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate image filters\n",
     "fig, axes = plt.subplot_mosaic(\"\"\"\n",
     "AAAABBB\n",
     "\"\"\", figsize=(6.5, 3.5))\n",
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
-    "freqs = make_frequencies((500, 400), pixel_size)\n",
+    "micrograph_shape = (500, 400)\n",
+    "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
-    "whiten = cs.WhiteningFilter(scattering.manager.padded_frequency_grid, fourier_micrograph)\n",
-    "plot_image(ifftn(fourier_micrograph.T).real, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
+    "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
+    "whiten = cs.WhiteningFilter(scattering.manager.padded_frequency_grid, micrograph)\n",
+    "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
    ]
