Things are working for #103. Have to still store the full VoxelGrid rather than storing it on the half space (would need to write our own map_coordinates). File loader fixes and improvements.

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -87,7 +87,7 @@
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "#density = cs.VoxelCloud.from_file(filename)\n",
     "density = cs.VoxelGrid.from_file(filename, pad_scale=1.5)\n",
-    "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
+    "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20., view_theta=100., view_psi=20.)\n",
     "ensemble = cs.Ensemble(density=density, pose=pose)"
    ]
   },
@@ -109,7 +109,7 @@
     "pixel_size = 5.28  # Angstroms\n",
     "manager = cs.ImageManager(shape=shape, pad_scale=1.5)\n",
     "#scattering = cs.NufftProject(manager, pixel_size=pixel_size, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size+0.2)"
+    "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)"
    ]
   },
   {
