--- a/tutorials/fourier_insert_slice.ipynb
+++ b/tutorials/fourier_insert_slice.ipynb
@@ -49,13 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, irfftn, make_frequencies"
+    "from cryojax.utils import fftn, irfftn, make_frequencies\n",
+    "from cryojax.simulator.scattering._fourier_slice import insert_slice"
    ]
   },
   {
@@ -394,9 +395,7 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from cryojax.simulator.scattering._fourier_slice import insert_slice"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -554,11 +553,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_slices = 1000\n",
+    "n_slices = 10\n",
     "filename = \"../hackathon/emd-3683.mrc\"\n",
     "random_rotations = Rotation.random(n_slices).as_euler('zyz', degrees=True) # np.random.uniform(-180,180, size=(n_slices,3))\n",
     "resolution = 1  # Angstroms\n",
@@ -574,7 +573,7 @@
     "freq_xy = make_frequencies((n_pix_render,n_pix_render))\n",
     "freq_abs = jnp.hypot(freq_xy[:,:,0],freq_xy[:,:,1])\n",
     "freq_abs = jnp.fft.fftshift(freq_abs)\n",
-    "\n",
+    "slices_f = jnp.zeros((n_slices, n_pix_render,n_pix_render), dtype=jnp.complex64)\n",
     "for idx in range(n_slices):\n",
     "    pose = cs.EulerPose(view_phi=random_rotations[idx,0], view_theta=random_rotations[idx,1], view_psi=random_rotations[idx,2])\n",
     "    specimen = cs.Specimen(density=density, pose=pose, resolution=resolution)\n",
@@ -582,11 +581,87 @@
     "    image = scattering_model.render()\n",
     "    \n",
     "    slice_f = jnp.fft.fftshift(fftn(image))\n",
+    "    slices_f = slices_f.at[idx].set(slice_f)\n",
     "    slice_f_ram_lak_filtered = freq_abs * slice_f\n",
     "    volume_f = insert_slice(slice_f_ram_lak_filtered, pose, to_real=False)\n",
     "    volume_sum_f += volume_f\n",
     "\n",
     "volume_r = irfftn(jnp.fft.ifftshift(volume_sum_f/n_slices)) * jnp.sqrt(n_pix_render**3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### fori loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(45., dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init_value = 0\n",
+    "start = 0\n",
+    "stop = 10\n",
+    "vals = jnp.arange(start, stop)\n",
+    "powers = jnp.ones(stop)\n",
+    "def body_fun(i, init_value):\n",
+    "    val = vals[i]\n",
+    "    power = powers[i]\n",
+    "    return init_value + val**power + 100\n",
+    "jax.lax.fori_loop(start, stop, body_fun, init_value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TracerArrayConversionError",
+     "evalue": "The numpy.ndarray conversion method __array__() was called on traced array with shape float32[3,16384].\nThe error occurred while tracing the function scanned_fun at /mnt/home/gwoollard/software/mambaforge/envs/cryojax/lib/python3.10/site-packages/jax/_src/lax/control_flow/loops.py:1853 for scan. This value became a tracer due to JAX operations on these lines:\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/simulator/scattering/_fourier_slice.py:156 (insert_slice)\n\n  operation a:f32[] = mul b c\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/simulator/pose.py:274 (make_euler_rotation)\n\n(Additional originating lines are not shown.)\nSee https://jax.readthedocs.io/en/latest/errors.html#jax.errors.TracerArrayConversionError",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTracerArrayConversionError\u001b[0m                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m     volume_sum_f \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m volume_f\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m volume_sum_f\n\u001b[0;32m----> 9\u001b[0m volume_sum_f \u001b[38;5;241m=\u001b[39m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfori_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_slices\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43maccumulate_insert_slice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mjnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_pix_render\u001b[49m\u001b[43m,\u001b[49m\u001b[43mn_pix_render\u001b[49m\u001b[43m,\u001b[49m\u001b[43mn_pix_render\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomplex64\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[25], line 5\u001b[0m, in \u001b[0;36maccumulate_insert_slice\u001b[0;34m(slice_idx, volume_sum_f)\u001b[0m\n\u001b[1;32m      3\u001b[0m pose \u001b[38;5;241m=\u001b[39m cs\u001b[38;5;241m.\u001b[39mEulerPose(view_phi\u001b[38;5;241m=\u001b[39mrandom_rotations[idx,\u001b[38;5;241m0\u001b[39m], view_theta\u001b[38;5;241m=\u001b[39mrandom_rotations[idx,\u001b[38;5;241m1\u001b[39m], view_psi\u001b[38;5;241m=\u001b[39mrandom_rotations[idx,\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m      4\u001b[0m slice_f_ram_lak_filtered \u001b[38;5;241m=\u001b[39m freq_abs \u001b[38;5;241m*\u001b[39m slice_f\n\u001b[0;32m----> 5\u001b[0m volume_f \u001b[38;5;241m=\u001b[39m \u001b[43minsert_slice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mslice_f_ram_lak_filtered\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpose\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mto_real\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m volume_sum_f \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m volume_f\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m volume_sum_f\n",
+      "File \u001b[0;32m~/repos/cryojax/src/cryojax/simulator/scattering/_fourier_slice.py:161\u001b[0m, in \u001b[0;36minsert_slice\u001b[0;34m(slice_f, pose, to_real)\u001b[0m\n\u001b[1;32m    158\u001b[0m xyz_central_slice \u001b[38;5;241m=\u001b[39m xyz\u001b[38;5;241m.\u001b[39mat[:\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m.\u001b[39mset(make_coordinates((N,N))\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mT)\n\u001b[1;32m    159\u001b[0m xyz_rotated_central_slice \u001b[38;5;241m=\u001b[39m rotation \u001b[38;5;241m@\u001b[39m xyz_central_slice\n\u001b[0;32m--> 161\u001b[0m inserted_slice_3d_real, count_3d_real \u001b[38;5;241m=\u001b[39m \u001b[43minsert_slice_and_interpolate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mslice_f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxyz_rotated_central_slice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    162\u001b[0m inserted_slice_3d_imag, count_3d_imag \u001b[38;5;241m=\u001b[39m insert_slice_and_interpolate(slice_f\u001b[38;5;241m.\u001b[39mimag, xyz_rotated_central_slice, N)\n\u001b[1;32m    164\u001b[0m volume \u001b[38;5;241m=\u001b[39m inserted_slice_3d_real\u001b[38;5;241m*\u001b[39mcount_3d_real \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39mj\u001b[38;5;241m*\u001b[39minserted_slice_3d_imag\u001b[38;5;241m*\u001b[39mcount_3d_imag\n",
+      "File \u001b[0;32m~/repos/cryojax/src/cryojax/simulator/scattering/_fourier_slice.py:125\u001b[0m, in \u001b[0;36minsert_slice_and_interpolate\u001b[0;34m(slice_real, xyz_rotated_single, n_pix)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minsert_slice_and_interpolate\u001b[39m(slice_real, xyz_rotated_single, n_pix):\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcryojax\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interpolate\n\u001b[0;32m--> 125\u001b[0m     r0, r1, dd \u001b[38;5;241m=\u001b[39m \u001b[43minterpolate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdiff\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxyz_rotated_single\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    126\u001b[0m     map_3d_interp_slice, count_3d_interp_slice \u001b[38;5;241m=\u001b[39m interpolate\u001b[38;5;241m.\u001b[39minterp_vec(\n\u001b[1;32m    127\u001b[0m         slice_real, r0, r1, dd, n_pix\n\u001b[1;32m    128\u001b[0m     )\n\u001b[1;32m    129\u001b[0m     inserted_slice_3d \u001b[38;5;241m=\u001b[39m map_3d_interp_slice\u001b[38;5;241m.\u001b[39mreshape((n_pix, n_pix, n_pix))\n",
+      "File \u001b[0;32m~/repos/cryojax/src/cryojax/utils/interpolate.py:145\u001b[0m, in \u001b[0;36mdiff\u001b[0;34m(xyz_rot)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdiff\u001b[39m(xyz_rot):\n\u001b[1;32m    128\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Precompute for linear interpolation.\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \n\u001b[1;32m    130\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;124;03m        Distance to 8 nearby voxels. Linear interpolation kernel.\u001b[39;00m\n\u001b[1;32m    144\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 145\u001b[0m     r0 \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxyz_rot\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n\u001b[1;32m    146\u001b[0m     r1 \u001b[38;5;241m=\u001b[39m r0 \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    147\u001b[0m     fr \u001b[38;5;241m=\u001b[39m xyz_rot \u001b[38;5;241m-\u001b[39m r0\n",
+      "File \u001b[0;32m~/software/mambaforge/envs/cryojax/lib/python3.10/site-packages/jax/_src/core.py:710\u001b[0m, in \u001b[0;36mTracer.__array__\u001b[0;34m(self, *args, **kw)\u001b[0m\n\u001b[1;32m    709\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw):\n\u001b[0;32m--> 710\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m TracerArrayConversionError(\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mTracerArrayConversionError\u001b[0m: The numpy.ndarray conversion method __array__() was called on traced array with shape float32[3,16384].\nThe error occurred while tracing the function scanned_fun at /mnt/home/gwoollard/software/mambaforge/envs/cryojax/lib/python3.10/site-packages/jax/_src/lax/control_flow/loops.py:1853 for scan. This value became a tracer due to JAX operations on these lines:\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/core.py:49 (<lambda>)\n\n  operation a:f32[] = convert_element_type[new_dtype=float32 weak_type=False] b\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/simulator/scattering/_fourier_slice.py:156 (insert_slice)\n\n  operation a:f32[] = mul b c\n    from line /mnt/home/gwoollard/repos/cryojax/src/cryojax/simulator/pose.py:274 (make_euler_rotation)\n\n(Additional originating lines are not shown.)\nSee https://jax.readthedocs.io/en/latest/errors.html#jax.errors.TracerArrayConversionError"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def accumulate_insert_slice(slice_idx, volume_sum_f):\n",
+    "    slice_f = slices_f[slice_idx]\n",
+    "    pose = cs.EulerPose(view_phi=random_rotations[idx,0], view_theta=random_rotations[idx,1], view_psi=random_rotations[idx,2])\n",
+    "    slice_f_ram_lak_filtered = freq_abs * slice_f\n",
+    "    volume_f = insert_slice(slice_f_ram_lak_filtered, pose, to_real=False)\n",
+    "    volume_sum_f += volume_f\n",
+    "    return volume_sum_f\n",
+    "\n",
+    "volume_sum_f = jax.lax.fori_loop(0, n_slices,\n",
+    "                                 accumulate_insert_slice, \n",
+    "                                 jnp.zeros((n_pix_render,n_pix_render,n_pix_render), dtype=jnp.complex64)\n",
+    "                                 )"
    ]
   },
   {
