Initial tests for helix

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
+    "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\""
    ]
   },
   {
@@ -89,7 +89,7 @@
     "#density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
     "density = cs.VoxelCloud.from_file(filename)\n",
     "#density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.5)\n",
-    "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20., view_theta=100., view_psi=20.)\n",
+    "pose = cs.EulerPose(offset_x=20.0, offset_y=-30.0, view_phi=-20., view_theta=70., view_psi=20.)\n",
     "ensemble = cs.Ensemble(density=density, pose=pose)"
    ]
   },
@@ -107,8 +107,8 @@
    "outputs": [],
    "source": [
     "# Configure the image formation process\n",
-    "shape = (81, 82)\n",
-    "pixel_size = 5.28  # Angstroms\n",
+    "shape = (64, 65)\n",
+    "pixel_size = 4.4  # Angstroms\n",
     "manager = cs.ImageManager(shape=shape, pad_scale=1.5)\n",
     "scattering = cs.NufftProject(manager, pixel_size=pixel_size, eps=1e-5)\n",
     "#scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)"
@@ -129,7 +129,7 @@
    "source": [
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
-    "exposure = cs.UniformExposure(N=1000.0, mu=0.0)\n",
+    "exposure = cs.UniformExposure(N=10.0, mu=0.0)\n",
     "detector = cs.GaussianDetector(variance=cs.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=5.0, scale=7.5))"
+    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=2.0, scale=7.5))"
    ]
   },
   {
@@ -202,13 +202,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Instantiate image filters\n",
     "fig, axes = plt.subplot_mosaic(\"\"\"\n",
@@ -241,7 +234,7 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = cc.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
-    "mask = cc.CircularMask(scattering.manager.coordinate_grid.get())\n",
+    "mask = cc.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
