Update demonstration notebook for helix

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, irfftn"
+    "from cryojax.image import fftn, irfftn"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "    fig.colorbar(im, cax=cax)\n",
     "    return fig, ax\n",
     "\n",
-    "def plot_images(images, **kwargs):\n",
+    "def plot_images(images, labels=None, **kwargs):\n",
     "    nimages = len(images)\n",
     "    fig, axes = plt.subplots(ncols=nimages, figsize=(4*nimages, 6))\n",
     "    if nimages == 1:\n",
@@ -66,6 +66,8 @@
     "    for idx, ax in enumerate(axes):\n",
     "        image = images[idx]\n",
     "        plot_image(image, fig, ax, **kwargs)\n",
+    "        if labels is not None:\n",
+    "            ax.set(title=labels[idx])\n",
     "    return fig, axes\n",
     "\n",
     "def plot_net(theta, z, **kwargs):\n",
@@ -82,7 +84,8 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "filename = \"../tests/data/3jar_monomer_bfm1_ps5_28.mrc\""
+    "subunit_filename = \"../tests/data/3j9g_subunit_bfm1_ps4_4.mrc\"\n",
+    "assembly_filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\""
    ]
   },
   {
@@ -92,11 +95,11 @@
    "outputs": [],
    "source": [
     "# Helical parameters\n",
-    "rise = 10.8  # Angstroms\n",
-    "twist = -23.8  # Degrees\n",
-    "n_start = 2   \n",
-    "radius = 250.0/2 # Angstroms\n",
-    "n_subunits = 30"
+    "rise = 21.94532431  # Angstroms\n",
+    "twist = 29.571584705551697  # Degrees\n",
+    "n_start = 6 # Start number\n",
+    "r_0 = jnp.asarray([-88.70895129, 9.75357114, 0.0], dtype=float)  # Displacement of initial subunit\n",
+    "n_subunits_per_start = 2  # Number of subunits per sub-helix"
    ]
   },
   {
@@ -105,11 +108,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the Specimen\n",
-    "resolution = 5.28  # Angstroms\n",
-    "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
-    "monomer = cs.Specimen(density=density, resolution=resolution)\n",
-    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=radius, n_start=n_start, n_subunits=n_subunits)"
+    "# Initialize density distributions and center of mass pose\n",
+    "subunit_density = cs.FourierVoxelGrid.from_file(subunit_filename, pad_scale=1.2)\n",
+    "assembly_density = cs.FourierVoxelGrid.from_file(assembly_filename, pad_scale=1.2)\n",
+    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0)\n",
+    "\n",
+    "# ... initialize the Ensembles\n",
+    "initial_subunit = cs.Ensemble(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
+    "true_assembly = cs.Ensemble(density=assembly_density, pose=pose)\n",
+    "\n",
+    "# ... initialize the Helix\n",
+    "helix = cs.Helix(subunit=initial_subunit, pose=pose, rise=rise, twist=twist, n_start=n_start, n_subunits_per_start=n_subunits_per_start)"
    ]
   },
   {
@@ -119,7 +128,7 @@
    "outputs": [],
    "source": [
     "# View the helical net\n",
-    "lattice = helix.lattice\n",
+    "lattice = helix.positions\n",
     "theta, z = jnp.arctan2(lattice[:, 1], lattice[:, 0]), lattice[:, 2]\n",
     "plot_net(theta, z)"
    ]
@@ -130,45 +139,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configure the image formation process\n",
-    "shape = (81, 82)\n",
-    "pad_scale = 1.5\n",
-    "scattering = cs.FourierSliceScattering(shape=shape, pad_scale=pad_scale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=90.0, view_psi=0.0)\n",
-    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "exposure = cs.UniformExposure()\n",
-    "state = cs.PipelineState(pose=pose, optics=optics, exposure=exposure)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Image formation models\n",
-    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=helix, state=state)\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=helix, state=state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Jitted models\n",
-    "jitted_scattering = eqx.filter_jit(scattering_model)\n",
-    "jitted_optics = eqx.filter_jit(optics_model)"
+    "# Configure the image settings and projection method\n",
+    "shape = (80, 80)\n",
+    "pixel_size = assembly_density.voxel_size\n",
+    "manager = cs.ImageManager(shape=shape, pad_scale=1.4)\n",
+    "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)\n",
+    "\n",
+    "# ... instantiate the image formation models\n",
+    "simulated = cs.SuperpositionPipeline(scattering=scattering, ensemble=helix.subunits)\n",
+    "truth = cs.ImagePipeline(scattering=scattering, ensemble=true_assembly)"
    ]
   },
   {
@@ -178,7 +157,8 @@
    "outputs": [],
    "source": [
     "# Plot models\n",
-    "fig, axes = plot_images([jitted_scattering(), jitted_optics()])\n",
+    "im1, im2 = simulated.render(), truth.render()\n",
+    "fig, axes = plot_images([im1, im2, im1-im2], labels=[\"Cryojax Assembly\", \"Ground truth\", \"Difference map\"])\n",
     "plt.tight_layout()"
    ]
   },
@@ -187,16 +167,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%timeit jitted_optics()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "cryojax",
    "language": "python",
-   "name": "python3"
+   "name": "cryojax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
