Add tutorial notebook for vmapping over poses

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -31,15 +31,8 @@
    "source": [
     "# Plotting imports and function definitions\n",
     "from matplotlib import pyplot as plt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "\n",
     "def plot_image(image, fig, ax, cmap=\"gray\", label=None, **kwargs):\n",
     "    im = ax.imshow(image, cmap=cmap, origin=\"lower\", **kwargs)\n",
     "    divider = make_axes_locatable(ax)\n",
