--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Image simulator imports\n",
-    "import cryojax.core as cc\n",
+    "import cryojax.image as ci\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import rfftn, irfftn, make_frequencies"
    ]
@@ -205,7 +205,7 @@
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
-    "whiten = cc.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
+    "whiten = ci.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -226,8 +226,8 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = cc.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
-    "mask = cc.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
+    "filter = ci.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
+    "mask = ci.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
