Refactoring to make the Specimen and Ensemble different classes

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -113,9 +113,9 @@
     "assembly_density = cs.FourierVoxelGrid.from_file(assembly_filename, pad_scale=1.2)\n",
     "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0)\n",
     "\n",
-    "# ... initialize the Ensembles\n",
-    "initial_subunit = cs.Ensemble(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
-    "true_assembly = cs.Ensemble(density=assembly_density, pose=pose)\n",
+    "# ... initialize the Specimen\n",
+    "initial_subunit = cs.Specimen(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
+    "true_assembly = cs.Specimen(density=assembly_density, pose=pose)\n",
     "\n",
     "# ... initialize the Helix\n",
     "helix = cs.Helix(subunit=initial_subunit, pose=pose, rise=rise, twist=twist, n_start=n_start, n_subunits_per_start=n_subunits_per_start)"
@@ -146,8 +146,8 @@
     "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)\n",
     "\n",
     "# ... instantiate the image formation models\n",
-    "simulated = cs.SuperpositionPipeline(scattering=scattering, ensemble=helix.subunits)\n",
-    "truth = cs.ImagePipeline(scattering=scattering, ensemble=true_assembly)"
+    "simulated = cs.SuperpositionPipeline(scattering=scattering, specimen=helix.subunits)\n",
+    "truth = cs.ImagePipeline(scattering=scattering, specimen=true_assembly)"
    ]
   },
   {
