--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our template into a given volume representation of the ``Ensemble``. We also must choose its ``Pose``."
+    "First we must read in our template into a given volume representation of the ``Specimen``. We also must choose its ``Pose``."
    ]
   },
   {
@@ -83,7 +83,7 @@
     "density = cs.VoxelCloud.from_file(filename)\n",
     "#density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.5)\n",
     "pose = cs.EulerPose(offset_x=20.0, offset_y=-30.0, view_phi=-20., view_theta=70., view_psi=20.)\n",
-    "ensemble = cs.Ensemble(density=density, pose=pose)"
+    "specimen = cs.Specimen(density=density, pose=pose)"
    ]
   },
   {
@@ -160,9 +160,9 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_s, solvent=solvent)\n",
-    "optics_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_o, solvent=solvent)\n",
-    "detector_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, solvent=solvent)"
+    "scattering_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_s, solvent=solvent)\n",
+    "optics_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_o, solvent=solvent)\n",
+    "detector_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, solvent=solvent)"
    ]
   },
   {
@@ -228,7 +228,7 @@
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = ci.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
     "mask = ci.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
-    "whitened_model = cs.ImagePipeline(scattering=scattering, ensemble=ensemble, instrument=instrument_d, filter=filter, mask=mask)\n",
+    "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
   }
