--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -89,8 +89,8 @@
     "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.3)\n",
     "scattering = cs.FourierSliceExtract(manager, pixel_size)\n",
     "\n",
-    "# ... build the Ensemble\n",
-    "ensemble = cs.Ensemble(density, poses)\n",
+    "# ... build the specimen\n",
+    "specimen = cs.specimen(density, poses)\n",
     "\n",
     "# ... and finally the instrument\n",
     "optics = cs.CTFOptics()\n",
@@ -122,9 +122,9 @@
     "    return jnp.sum(compute_image_stack(vmap, novmap), axis=0)\n",
     "\n",
     "@jax.jit\n",
-    "def compute_micrograph(ensemble, scattering, instrument):\n",
+    "def compute_micrograph(specimen, scattering, instrument):\n",
     "    \"\"\"Build the model and compute the superposition.\"\"\"\n",
-    "    pipeline = cs.ImagePipeline(ensemble, scattering, instrument)\n",
+    "    pipeline = cs.ImagePipeline(specimen, scattering, instrument)\n",
     "    is_vmap = lambda x: isinstance(x, cs.Pose)\n",
     "    to_vmap = jax.tree_util.tree_map(is_vmap, pipeline, is_leaf=is_vmap)\n",
     "    vmap, novmap = eqx.partition(pipeline, to_vmap)\n",
@@ -139,7 +139,7 @@
    "source": [
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots()\n",
-    "micrograph = compute_micrograph(ensemble, scattering, instrument)\n",
+    "micrograph = compute_micrograph(specimen, scattering, instrument)\n",
     "plot_image(micrograph, fig, ax, label=\"Sum of random poses\")"
    ]
   },
@@ -158,7 +158,7 @@
    "source": [
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots()\n",
-    "superposition_pipeline = cs.SuperpositionPipeline(ensemble, scattering, instrument)\n",
+    "superposition_pipeline = cs.SuperpositionPipeline(specimen, scattering, instrument)\n",
     "micrograph = superposition_pipeline.render()\n",
     "plot_image(micrograph, fig, ax, label=\"Sum of random poses with SuperpositionPipeline\")"
    ]
