--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -90,7 +90,7 @@
     "scattering = cs.FourierSliceExtract(manager, pixel_size)\n",
     "\n",
     "# ... build the specimen\n",
-    "specimen = cs.specimen(density, poses)\n",
+    "specimen = cs.Specimen(density, poses)\n",
     "\n",
     "# ... and finally the instrument\n",
     "optics = cs.CTFOptics()\n",
