--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -71,7 +71,8 @@
     "# ... rotations\n",
     "rotations = jax.vmap(lambda key: SO3.sample_uniform(key))(keys)\n",
     "# ... translations\n",
-    "translations = jax.vmap(lambda key: jax.random.uniform(key, (3,), minval=-image_size/2, maxval=image_size/2))(keys)"
+    "translations = jax.vmap(lambda key: jax.random.uniform(key, (3,), minval=-image_size/2, maxval=image_size/2))(keys)\n",
+    "translations /= jnp.asarray([1.0, 1.0, image_size/2])"
    ]
   },
   {
