Introduce the concept of ImageOperators

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -50,8 +50,8 @@
    "outputs": [],
    "source": [
     "# Image simulator imports\n",
-    "import cryojax.image as ci\n",
     "import cryojax.simulator as cs\n",
+    "from cryojax.image import operator as op\n",
     "from cryojax.image import rfftn, irfftn, make_frequencies"
    ]
   },
@@ -123,7 +123,7 @@
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
     "exposure = cs.UniformExposure(N=10.0, mu=0.0)\n",
-    "detector = cs.GaussianDetector(variance=cs.Constant(1.0))\n",
+    "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
     "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
@@ -205,7 +205,7 @@
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
-    "whiten = ci.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
+    "whiten = op.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -226,8 +226,8 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = ci.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
-    "mask = ci.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
+    "filter = op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
+    "mask = op.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
