--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.image import operator as op\n",
+    "from cryojax.image import operators as op\n",
     "from cryojax.image import rfftn, irfftn, make_frequencies"
    ]
   },
@@ -122,7 +122,7 @@
    "source": [
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
-    "exposure = cs.UniformExposure(N=10.0, mu=0.0)\n",
+    "exposure = cs.Exposure(scaling=op.Constant(10.0), offset=op.ZeroMode(0.0))\n",
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=2.0, scale=7.5))"
+    "solvent = cs.GaussianIce(variance=op.Exp(amplitude=2.0, scale=7.5))"
    ]
   },
   {
@@ -226,11 +226,18 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.95) * whiten\n",
+    "filter = op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=0.667) * whiten\n",
     "mask = op.CircularMask(scattering.manager.coordinate_grid.get(), radius=0.75)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model.render(), fig, ax)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
