--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=op.Exp(amplitude=2.0, scale=7.5))"
+    "solvent = cs.GaussianIce(variance=op.FourierExp(amplitude=2.0, scale=7.5))"
    ]
   },
   {
