create passing through Ice and Detector to allow for more general behavior in the future

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -203,7 +203,8 @@
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "micrograph_shape = (500, 400)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
-    "fourier_micrograph = solvent.sample(key1, freqs) * optics(freqs) + detector.sample(key2, freqs)\n",
+    "fourier_micrograph = solvent.sample(key1, jnp.zeros(freqs.shape[0:-1]), freqs, optics(freqs))\n",
+    "fourier_micrograph = detector.sample(key2, fourier_micrograph, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
     "whiten = op.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
