--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -121,7 +121,8 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "optics = cs.CTFOptics(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
+    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
+    "optics = cs.CTFOptics(ctf)\n",
     "exposure = cs.Exposure(scaling=op.Constant(10.0), offset=op.ZeroMode(0.0))\n",
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
@@ -203,7 +204,7 @@
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "micrograph_shape = (500, 400)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
-    "fourier_micrograph = solvent.sample(key1, jnp.zeros(freqs.shape[0:-1]), freqs, optics(freqs))\n",
+    "fourier_micrograph = solvent.sample(key1, jnp.zeros(freqs.shape[0:-1]), freqs, optics.evaluate(freqs))\n",
     "fourier_micrograph = detector.sample(key2, fourier_micrograph, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
     "whiten = op.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
