--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -204,7 +204,7 @@
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "micrograph_shape = (500, 400)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
-    "fourier_micrograph = solvent.sample(key1, jnp.zeros(freqs.shape[0:-1]), freqs, optics.evaluate(freqs))\n",
+    "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
     "fourier_micrograph = detector.sample(key2, fourier_micrograph, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
     "whiten = op.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
