move pixel_size to the ImageManager. this only makes sense...

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -142,8 +142,8 @@
     "# Configure the image settings and projection method\n",
     "shape = (80, 80)\n",
     "pixel_size = assembly_density.voxel_size\n",
-    "manager = cs.ImageManager(shape=shape, pad_scale=1.4)\n",
-    "scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)\n",
+    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.4)\n",
+    "scattering = cs.FourierSliceExtract(manager)\n",
     "\n",
     "# ... instantiate the image formation models\n",
     "simulated = cs.SuperpositionPipeline(scattering=scattering, specimen=helix.subunits)\n",
