--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -102,9 +102,9 @@
     "# Configure the image formation process\n",
     "shape = (64, 65)\n",
     "pixel_size = 4.4  # Angstroms\n",
-    "manager = cs.ImageManager(shape=shape, pad_scale=1.5)\n",
-    "scattering = cs.NufftProject(manager, pixel_size=pixel_size, eps=1e-5)\n",
-    "#scattering = cs.FourierSliceExtract(manager, pixel_size=pixel_size)"
+    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.5)\n",
+    "scattering = cs.NufftProject(manager, eps=1e-5)\n",
+    "#scattering = cs.FourierSliceExtract(manager)"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
     "fourier_micrograph = detector.sample(key2, fourier_micrograph, freqs)\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
-    "whiten = op.WhiteningFilter(scattering.manager.padded_frequency_grid.get(), micrograph)\n",
+    "whiten = op.WhiteningFilter(manager.padded_frequency_grid.get(), micrograph)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
