--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -86,9 +86,9 @@
     "\n",
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
-    "manager = cs.ImageManager(shape, pad_scale=1.2)\n",
+    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.2)\n",
     "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.3)\n",
-    "scattering = cs.FourierSliceExtract(manager, pixel_size)\n",
+    "scattering = cs.FourierSliceExtract(manager)\n",
     "\n",
     "# ... build the specimen\n",
     "specimen = cs.Specimen(density, poses)\n",
