--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -123,7 +123,7 @@
     "# Initialize the instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
     "optics = cs.CTFOptics(ctf)\n",
-    "exposure = cs.Exposure(scaling=op.Constant(10.0), offset=op.ZeroMode(0.0))\n",
+    "exposure = cs.Exposure(dose=op.Constant(10.0))\n",
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
