--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -210,7 +210,7 @@
     "whiten = op.WhiteningFilter(micrograph, manager.padded_shape)\n",
     "#whiten = op.WhiteningFilter(freqs[1:, 1:], micrograph, pixel_size)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
-    "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
+    "plot_image(whiten.buffer, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -232,7 +232,7 @@
     "filter = op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=1.0) * whiten\n",
     "mask = op.CircularMask(scattering.manager.coordinate_grid_in_angstroms.get(), radius=25 * pixel_size)\n",
     "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
-    "plot_image(whitened_model.render(), fig, ax)"
+    "plot_image(whitened_model(), fig, ax)"
    ]
   },
   {
